--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gsap": "^3.12.2",
     "next": "13.4.12",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-scripts": "^5.0.1"
   }
 }
